@@ -1,3 +1,7 @@
+2003-06-29  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b39
+
+	* Minor fix to AlbumItem integrityCheck to avoid using constant strings.
+
 2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b38
 	
 	* upgrade album version to 12, to change item owner names
